client/src/drawing.css
body{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: auto;
  max-width: 100%;
  width: 100%;
}

html {
  max-width: 100%;
  box-sizing: border-box;

}

.full {
  height: 100%;
  width: 100%;
  
}

.textarea {
    font-family: Arial, Helvetica, sans-serif;
    display: block;
    width: 80%;
    overflow:auto;
    min-height: 5rem;
    line-height: 20px;
    /*height:auto;*/
    resize: none;
    font-size: 1rem;
    border-radius: 20px;
    padding: 20px 20px;
    padding-bottom: 0;
    border: 0.3rem solid black;
    transition: 0.5s;
  }

  .textarea:focus {
    background-color: rgb(238, 238, 238);
  }


  .section-containers{
    background-color: white;
    border: 0.5rem solid gray;
    margin-bottom: 3rem;
    width: 85%;
    display: flex;
    flex-direction: column;
    border-radius: 20px;
    padding: 2rem;
    transition: 0.3s;
  }


.titles{
  width: 50%;
  min-height: 3rem;
  font-size: 2rem;
  font-weight: bold;
  border-radius: 20px;
  border: 3px solid transparent;
  padding: 0 1rem; 
  line-height: 3rem;
  margin-bottom: 1rem;
  transition: 0.5s;
  outline: none;
  white-space: normal; 
  resize: none;
  overflow: hidden;
}

.titles:focus {
  background-color: rgb(238, 238, 238);
  border: 3px solid black;
}



.results{
  font-family: Arial, Helvetica, sans-serif;
  display: block;
  min-height: 5rem;
  line-height: 20px;
  background-color: white;
  width: 80%;
  font-size: 1rem;
  border-radius: 20px;
  padding: 20px 20px;
  overflow-wrap: break-word;
  border: 0.3rem solid black;
  margin-top: 1rem;
}



.board {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  flex-shrink: 0;
  margin-left: 0;
  transition: 0.3s;
}

.btn {
  width: 10%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  border-radius: 20px;
  border: none;
  padding: 0.5rem;
  transition: 0.4s;
  background-color: rgb(218, 218, 218);
}

.btn:hover {
  cursor: pointer;
  color:white;
  background-color: black;
}

.block-container{
  width: 100%;
  margin-top: 2rem;
}

.block-container:first-of-type{
  margin-top: 0;
}

.container{
  display: flex;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-anchor: none;
}


.nav-panel{
  white-space: nowrap;
  width: 0;
  min-width: 0;
  height: 600px;
  top: 12%;
  /*margin-left: -100px;*/
  transform: translateX(-100px);
  padding: 0;
  margin: 0;
  border-radius: 30px;
  position: sticky;
  background-color: black;
  transition: 0.4s;
  flex-shrink: 0;
  flex-grow: 0;

}


.section-text{
  color: white;
  cursor: pointer;
  user-select: none;
  transition: 0.3s;
}

.section-text:hover{
  color:grey
}


.markdown-title{
  padding: 0 1rem; 
}

.mode-title{
  padding: 0.5rem 1rem; 
  color: white;
  background-color: black;
  width: 15%;
  border-radius: 30px;
  text-align: center;
}

.back-btn{
  color:white;
  cursor: pointer;
  position: absolute;
  bottom: 0;
  right: 50%;
}

.tool-bar{
  background-color: red;
  margin-left: 0;
  width: 0;
  
}

.open-panel{
  position: sticky;
  top: 0;
  width: 1.5rem;
}

.panel-btn{
  margin: 0;
  margin-left:1rem;
  /*padding-top: 1rem;*/
  cursor: pointer;
  transition: 0.3s;
  transform-origin: center;
  user-select: none;
  color: white;
}

.test{
  height: 0;
}



.right{
  /*background-color: white;*/
  background: rgb(247, 247, 247);
  width: 0;
  flex-shrink: 0;
  flex-grow: 0;
  transition: 0.3s;
  height: 800px;
  position: sticky;
  border-radius: 30px;
  top: 12%;
  box-shadow: 5px 2px 10px;
  text-align: center;
  overflow: hidden;

}


.edit-panel-title{
  margin-left: 35%;
}


.right-btn{
  z-index: 999;
  cursor: pointer;
}

.textareaRight{
  background: rgb(247, 247, 247);
  font-family: Arial, Helvetica, sans-serif;
  display: block;
  width: 34vw;
  overflow:auto;
  height: 80%;
  max-height: 80%;
  min-height: 30%;
  margin-left: 2rem;
  line-height: 20px;
  /*height:auto;*/
  resize: none;
  font-size: 1rem;
  border-radius: 20px;
  padding: 20px 20px;
  padding-bottom: 0;
  /*border: 0.3rem solid white;*/
  outline: none;
  border: none;
  box-shadow: 10px 5px 7px rgb(211, 211, 211), 
            -10px -5px 7px rgb(241, 241, 241),

            -10px -7px 10px transparent inset, 
            10px 5px 7px transparent inset;
  transition: 0.5s;
}

.textareaRight:focus{
  /*border: 0.3rem solid black;*/
  box-shadow: 
  10px 5px 7px transparent, 
  -10px -5px 7px transparent,
  
  -10px -5px 7px rgb(211, 211, 211) inset, 
  10px 5px 7px rgb(241, 241, 241) inset;

}

.right-title-container{
  display: flex;
  justify-content: start;
  align-items: center;
  height: 10%;
  width: 30vw;
}

.right-back-btn{
  width: 3rem;
  height: 50%;
  font-size: 2rem;
  font-weight: bold;
  border-radius: 40px;
  margin-left: 3rem;
  background-color: white;
  border: none;
  cursor: pointer;
}

pre{
  background-color: rgb(227, 226, 226);
  padding: 1rem 1rem;
  border-radius: 10px;
}

.nav-bar{
  position: -webkit-sticky;
  margin: 0;
  top: 0;
  width: 100%;
  background-color: black;
  display: flex;
  align-items: center;
  position: sticky;
  height: 3rem;
}

.title{
  color: white;
  margin: 0;
  margin-left: 3rem;
}

.edit-btn{
  margin-left: auto;
  margin-right: 3rem;
  display: flex;
}

.arrow-btn{
  transition: 0.3s;
}

.add-btn{
  background-color: rgb(0, 0, 0);
  color: white;
}

.save-btn{
  background-color: rgb(140, 253, 148);
}

.util-btn{
  padding: 0.5rem 3rem;
  border-radius: 20px;
  font-size: 110%;
  font-weight: bold;
  cursor: pointer;
  border-color: transparent;
}

.footer{
  padding-bottom: 10vh;
  width: 50rem;
  display: flex;
  justify-content: space-around;
}

@media only screen and (max-width: 600px) {
  .full{
    width: 100%;
  }
}

